--- a/wav12/wav12.vcxproj
+++ b/wav12/wav12.vcxproj
@@ -152,7 +152,9 @@
     <ClInclude Include="..\tinyxml2.h" />
     <ClInclude Include="..\wave_reader.h" />
     <ClInclude Include="..\wave_writer.h" />
+    <ClInclude Include="..\wavutil.h" />
     <ClInclude Include="compress.h" />
+    <ClInclude Include="s4adpcm.h" />
     <ClInclude Include="wav12stream.h" />
   </ItemGroup>
   <ItemGroup>
@@ -161,7 +163,9 @@
     <ClCompile Include="..\wav12.cpp" />
     <ClCompile Include="..\wave_reader.c" />
     <ClCompile Include="..\wave_writer.c" />
+    <ClCompile Include="..\wavutil.cpp" />
     <ClCompile Include="compress.cpp" />
+    <ClCompile Include="s4adpcm.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
