try to make main file text

--- a/wav12/wav12.vcxproj
+++ b/wav12/wav12.vcxproj
@@ -161,12 +161,12 @@
     <ClCompile Include="..\memimage.cpp" />
     <ClCompile Include="..\tinyxml2.cpp" />
     <ClCompile Include="..\wav12.cpp" />
+    <ClCompile Include="..\wav12ly.cpp" />
     <ClCompile Include="..\wave_reader.c" />
     <ClCompile Include="..\wave_writer.c" />
     <ClCompile Include="..\wavutil.cpp" />
     <ClCompile Include="expander.cpp" />
     <ClCompile Include="s4adpcm.cpp" />
-    <ClCompile Include="wav12ly.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
