--- a/wav12/wav12.vcxproj.filters
+++ b/wav12/wav12.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClCompile Include="expander.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="wav12ly.cpp">
+    <ClCompile Include="..\wav12ly.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
