--- a/wav12/wav12.vcxproj.filters
+++ b/wav12/wav12.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="..\util\interface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\codec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\wave_reader.c">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\wav12ly.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\codec.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
