--- a/wav12/wav12.vcxproj.filters
+++ b/wav12/wav12.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="..\codec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\manifest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\wave_reader.c">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\codec.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\manifest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
