--- a/wav12/wav12.vcxproj.filters
+++ b/wav12/wav12.vcxproj.filters
@@ -39,13 +39,13 @@
     <ClInclude Include="expander.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\util\interface.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\codec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\manifest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="interface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
