--- a/wav12/wav12.vcxproj
+++ b/wav12/wav12.vcxproj
@@ -157,9 +157,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\codec.h" />
-    <ClInclude Include="..\manifest.h" />
     <ClInclude Include="..\memimage.h" />
     <ClInclude Include="..\tinyxml2.h" />
+    <ClInclude Include="..\wav12util\manifest.h" />
     <ClInclude Include="..\wave_reader.h" />
     <ClInclude Include="..\wave_writer.h" />
     <ClInclude Include="..\wavutil.h" />
@@ -170,10 +170,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\codec.cpp" />
-    <ClCompile Include="..\manifest.cpp" />
     <ClCompile Include="..\memimage.cpp" />
     <ClCompile Include="..\tinyxml2.cpp" />
     <ClCompile Include="..\wav12ly.cpp" />
+    <ClCompile Include="..\wav12util\manifest.cpp" />
     <ClCompile Include="..\wave_reader.c" />
     <ClCompile Include="..\wave_writer.c" />
     <ClCompile Include="..\wavutil.cpp" />
